--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ jdk:
   - oraclejdk8
 before_install:
   - chmod +x gradlew
+install:
+  - pip install coveralls
+after_success: gradlew jacocoTestReport coveralls
