--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,22 @@ plugins {
     id 'jacoco'
 }
 
-repositories {
-    mavenCentral()
-}
-
-test {
-    testLogging {
-        exceptionFormat = 'full'
-        showStandardStreams = true
+subprojects {
+    repositories {
+        mavenCentral()
     }
+
+    test {
+        testLogging {
+            exceptionFormat = 'full'
+            showStandardStreams = true
+        }
+    }
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+
+    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+    [compileGroovy, compileTestGroovy]*.options*.encoding = 'UTF-8'
 }
 
 jacocoTestReport {
@@ -22,11 +29,6 @@ jacocoTestReport {
         html.enabled = true
     }
 }
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-[compileGroovy, compileTestGroovy]*.options*.encoding = 'UTF-8'
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.9'
