single module project for testing coveralls.io

--- a/build.gradle
+++ b/build.gradle
@@ -5,22 +5,8 @@ plugins {
     id 'jacoco'
 }
 
-subprojects {
-    repositories {
-        mavenCentral()
-    }
-
-    test {
-        testLogging {
-            exceptionFormat = 'full'
-            showStandardStreams = true
-        }
-    }
-
-    sourceCompatibility = JavaVersion.VERSION_1_8
-
-    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-    [compileGroovy, compileTestGroovy]*.options*.encoding = 'UTF-8'
+dependencies {
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
 }
 
 jacocoTestReport {
@@ -29,6 +15,22 @@ jacocoTestReport {
         html.enabled = true
     }
 }
+
+repositories {
+    mavenCentral()
+}
+
+test {
+    testLogging {
+        exceptionFormat = 'full'
+        showStandardStreams = true
+    }
+}
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+[compileGroovy, compileTestGroovy]*.options*.encoding = 'UTF-8'
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.9'
