--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ jdk:
   - oraclejdk8
 before_install:
   - chmod +x gradlew
-after_success: gradlew jacocoTestReport coveralls
+after_success:
+  - gradlew jacocoTestReport
+  - coveralls
