--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ jdk:
 before_install:
   - chmod +x gradlew
 after_success:
-  - gradlew jacocoTestReport
+  - ./gradlew jacocoTestReport
   - coveralls
