testing coveralls.io

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'groovy'
     id 'checkstyle'
     id 'jacoco'
+    id "com.github.kt3k.coveralls" version "2.4.0x"
 }
 
 dependencies {
