--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ jdk:
 before_install:
   - chmod +x gradlew
 after_success:
-  - ./gradlew jacocoTestReport
-  - coveralls
+  - ./gradlew jacocoTestReport coveralls
