done coveralls.io for single module project

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 jacocoTestReport {
     reports {
         xml.enabled = true
-        html.enabled = true
+        html.enabled = false
     }
 }
 
