--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'spring-boot-unicore'
+rootProject.name = 'spring-unicore'
 
 //def subDirs = rootDir.listFiles(new FileFilter() {
 //    public boolean accept(File file) {
