--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,15 @@
 rootProject.name = 'spring-unicore'
 
-//def subDirs = rootDir.listFiles(new FileFilter() {
-//    public boolean accept(File file) {
-//        if (!file.isDirectory()) {
-//            return false
-//        }
-//
-//        return new File(file, 'build.gradle').isFile()
-//    }
-//});
-//
-//subDirs.each { File dir ->
-//    include dir.name
-//}
+def subDirs = rootDir.listFiles(new FileFilter() {
+    public boolean accept(File file) {
+        if (!file.isDirectory()) {
+            return false
+        }
+
+        return new File(file, 'build.gradle').isFile()
+    }
+});
+
+subDirs.each { File dir ->
+    include dir.name
+}
