--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,5 @@ before_install:
   - chmod +x gradlew
 
 after_success:
-  - ./gradlew jacocoRootReport coveralls
-  - cp -r build/reports/jacoco/jacocoRootReport build/reports/jacoco/test
-  - mv build/reports/jacoco/test/jacocoRootReport.xml build/reports/jacoco/test/jacocoTestReport.xml
+  - ./gradlew jacocoRootReport
   - ./gradlew coveralls
