--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
     dependsOn = subprojects.test
     additionalSourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs)
     sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
-    classDirectories = files(subprojects.sourceSets.main.output)
+    classDirectories = files(subprojects.sourceSets.main.output.classesDir)
     executionData = files(subprojects.jacocoTestReport.executionData)
     reports {
         html.enabled = false
