--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
     }
 }
 
+//coveralls.jacocoReportPath = 'build/reports/coverage/jodd-coverage.xml'
+coveralls.sourceDirs = ['spring-boot-unicore-starter/src/main/java']
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.9'
 }
