--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ before_install:
   - chmod +x gradlew
 
 after_success:
-  - ./gradlew jacocoRootReport
-  - ./gradlew coveralls
+  - ./gradlew jacocoRootReport coveralls
