--- a/spring-boot-unicore-starter/build.gradle
+++ b/spring-boot-unicore-starter/build.gradle
@@ -1,7 +1,9 @@
 def springBootVersion = '1.3.0.RELEASE'
 
 dependencies {
-    compile "org.springframework.boot:spring-boot:${springBootVersion}"
+    compile "org.springframework.boot:spring-boot:${springBootVersion}",
+            'eu.unicore.workflow:common:2.8.1',
+            'eu.unicore:uas-client:1.9.3'
 
     testCompile 'com.github.tomakehurst:wiremock:1.54',
             'cglib:cglib-nodep:3.2.0',
@@ -10,4 +12,9 @@ dependencies {
             'org.spockframework:spock-spring:1.0-groovy-2.4',
             "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
             'org.springframework:spring-test:4.1.8.RELEASE'
+}
+
+repositories {
+    mavenCentral()
+    maven { url 'http://unicore-dev.zam.kfa-juelich.de/maven' }
 }
