--- a/spring-boot-unicore-starter/build.gradle
+++ b/spring-boot-unicore-starter/build.gradle
@@ -1,13 +1,13 @@
-def springBootVersion = '1.3.0.RELEASE'
+def springBootVersion = '1.3.1.RELEASE'
 
 dependencies {
     compile "org.springframework.boot:spring-boot:${springBootVersion}"
 
-    testCompile 'com.github.tomakehurst:wiremock:1.54',
+    testCompile 'com.github.tomakehurst:wiremock:1.58',
             'cglib:cglib-nodep:3.2.0',
             'org.objenesis:objenesis:2.2',
             'org.spockframework:spock-core:1.0-groovy-2.4',
             'org.spockframework:spock-spring:1.0-groovy-2.4',
             "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
-            'org.springframework:spring-test:4.1.8.RELEASE'
+            "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
