--- a/spring-boot-unicore-starter/build.gradle
+++ b/spring-boot-unicore-starter/build.gradle
@@ -1,4 +1,20 @@
-def springBootVersion = '1.3.0.RELEASE'
+buildscript {
+    repositories { jcenter() }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.3.4'
+    }
+}
+
+plugins {
+    id 'pl.allegro.tech.build.axion-release' version '1.3.4'
+}
+
+scmVersion { tag { prefix = project.name } }
+project.version = scmVersion.version
+
+apply plugin: 'com.novoda.bintray-release'
+
+def springBootVersion = '1.3.2.RELEASE'
 
 dependencies {
     compile "org.springframework.boot:spring-boot:${springBootVersion}",
@@ -17,4 +33,15 @@ dependencies {
 repositories {
     mavenCentral()
     maven { url 'http://unicore-dev.zam.kfa-juelich.de/maven' }
+}
+
+publish {
+    userOrg = 'unicore-life'
+    groupId = 'pl.icm.edu.unicore'
+    artifactId = project.name
+    publishVersion = '0.1.0'
+    uploadName = rootProject.name
+
+    desc = 'Spring starter for UNICORE'
+    website = "http://github.com/unicore-life/${rootProject.name}"
 }
