--- a/spring-boot-unicore-starter/build.gradle
+++ b/spring-boot-unicore-starter/build.gradle
@@ -1,6 +1,22 @@
-def springBootVersion = '1.3.0.RELEASE'
+buildscript {
+    repositories { jcenter() }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.3.4'
+    }
+}
+
+plugins {
+    id 'pl.allegro.tech.build.axion-release' version '1.3.4'
+}
+
+scmVersion { tag { prefix = project.name } }
+project.version = scmVersion.version
+
+apply plugin: 'com.novoda.bintray-release'
 
 dependencies {
+    def springBootVersion = '1.3.2.RELEASE'
+
     compile "org.springframework.boot:spring-boot:${springBootVersion}"
 
     testCompile 'com.github.tomakehurst:wiremock:1.54',
@@ -10,4 +26,15 @@ dependencies {
             'org.spockframework:spock-spring:1.0-groovy-2.4',
             "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
             'org.springframework:spring-test:4.1.8.RELEASE'
+}
+
+publish {
+    userOrg = 'unicore-life'
+    groupId = 'pl.icm.edu.unicore'
+    artifactId = project.name
+    publishVersion = '0.1.0'
+    uploadName = rootProject.name
+
+    desc = 'Spring starter for UNICORE'
+    website = "http://github.com/unicore-life/${rootProject.name}"
 }
