--- a/spring-boot-unicore-starter/build.gradle
+++ b/spring-boot-unicore-starter/build.gradle
@@ -1,22 +1,23 @@
 buildscript {
     repositories { jcenter() }
-    dependencies {
-        classpath 'com.novoda:bintray-release:0.3.4'
-    }
+    dependencies { classpath 'com.novoda:bintray-release:0.3.4' }
 }
 
 plugins {
     id 'pl.allegro.tech.build.axion-release' version '1.3.4'
 }
 
-scmVersion { tag { prefix = project.name } }
+scmVersion.tag.prefix = project.name
+
+group 'pl.edu.icm.unicore'
 project.version = scmVersion.version
 
 apply plugin: 'com.novoda.bintray-release'
 
-def springBootVersion = '1.3.2.RELEASE'
 
 dependencies {
+    def springBootVersion = '1.3.2.RELEASE'
+
     compile "org.springframework.boot:spring-boot:${springBootVersion}",
             'eu.unicore.workflow:common:2.8.1',
             'eu.unicore:uas-client:1.9.3'
@@ -37,9 +38,9 @@ repositories {
 
 publish {
     userOrg = 'unicore-life'
-    groupId = 'pl.icm.edu.unicore'
+    groupId = project.group
     artifactId = project.name
-    publishVersion = '0.1.0'
+    publishVersion = project.version
     uploadName = rootProject.name
 
     desc = 'Spring starter for UNICORE'
