--- a/unicore-spring-boot-starter/build.gradle
+++ b/unicore-spring-boot-starter/build.gradle
@@ -18,7 +18,9 @@ apply plugin: 'com.novoda.bintray-release'
 dependencies {
     def springBootVersion = '1.3.2.RELEASE'
 
-    compile "org.springframework.boot:spring-boot:${springBootVersion}",
+    compile 'org.slf4j:slf4j-api:1.7.13',
+            "org.springframework.boot:spring-boot:${springBootVersion}",
+            "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
             'eu.unicore.workflow:common:2.8.2',
             'eu.unicore:uas-client:1.9.5-SNAPSHOT'
 
@@ -27,7 +29,6 @@ dependencies {
             'org.objenesis:objenesis:2.2',
             'org.spockframework:spock-core:1.0-groovy-2.4',
             'org.spockframework:spock-spring:1.0-groovy-2.4',
-            "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
             "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
 
