broker central and storage factory services as beans + refactor

--- a/unicore-spring-boot-starter/src/test/resources/application-test.yaml
+++ b/unicore-spring-boot-starter/src/test/resources/application-test.yaml
@@ -1,1 +1,2 @@
 unicore.identityConfig: classpath:grid-test.properties
+unicore.registryUri: http://localhost:8080/REGISTRY/services/Registry?res=default_registry
