--- a/unicore-spring-boot-starter/build.gradle
+++ b/unicore-spring-boot-starter/build.gradle
@@ -22,7 +22,7 @@ dependencies {
             "org.springframework.boot:spring-boot:${springBootVersion}",
             "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
             'eu.unicore.workflow:common:2.8.2',
-            'eu.unicore:uas-client:1.9.5-SNAPSHOT'
+            'eu.unicore:uas-client:1.9.5'
 
     testCompile 'com.github.tomakehurst:wiremock:1.58',
             'cglib:cglib-nodep:3.2.0',
