--- a/unicore-spring-boot-starter/build.gradle
+++ b/unicore-spring-boot-starter/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 }
 
 plugins {
-    id 'pl.allegro.tech.build.axion-release' version '1.3.4'
+    id 'pl.allegro.tech.build.axion-release' version '1.4.1'
 }
 
 scmVersion.tag.prefix = project.name
@@ -16,20 +16,18 @@ apply plugin: 'com.novoda.bintray-release'
 
 
 dependencies {
-    def springBootVersion = '1.4.0.RELEASE'
+    compile 'org.slf4j:slf4j-api:1.7.22',
+            "org.springframework.boot:spring-boot:${versions.springBoot}",
+            "org.springframework.boot:spring-boot-autoconfigure:${versions.springBoot}",
+            'eu.unicore.workflow:common:2.8.4',
+            'eu.unicore:uas-client:1.9.6'
 
-    compile 'org.slf4j:slf4j-api:1.7.21',
-            "org.springframework.boot:spring-boot:${springBootVersion}",
-            "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}",
-            'eu.unicore.workflow:common:2.8.3',
-            'eu.unicore:uas-client:1.9.5'
-
-    testCompile 'com.github.tomakehurst:wiremock:2.1.11',
+    testCompile 'com.github.tomakehurst:wiremock:2.5.0',
             'cglib:cglib-nodep:3.2.4',
-            'org.objenesis:objenesis:2.4',
-            'org.spockframework:spock-core:1.0-groovy-2.4',
-            'org.spockframework:spock-spring:1.0-groovy-2.4',
-            "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+            'org.objenesis:objenesis:2.5.1',
+            "org.spockframework:spock-core:${versions.spock}",
+            "org.spockframework:spock-spring:${versions.spock}",
+            "org.springframework.boot:spring-boot-starter-test:${versions.springBoot}"
 }
 
 repositories {
