--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ allprojects {
     }
 
     project.ext.versions = [
-            springBoot: '1.4.3.RELEASE',
-            spock     : '1.0-groovy-2.4',
+            springBoot: '1.5.0.RC1',
+            spock     : '1.1-groovy-2.4-rc-3',
 
             checkstyle: '6.3',
             gradle    : '3.3'
